feat: http 下载合并

--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "hello world",
   "main": "index.js",
   "scripts": {
-    "test": "babel index.es7.js -o index.js && node ./test/index.test.js"
+    "test": "babel index.es7.js -o index.js && node ./test/index-test.js"
   },
+  "files": [
+    "lib/",
+    "index.js"
+    "index.es7.js"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/noyobo/img-spriter.git"
@@ -17,6 +22,9 @@
   ],
   "author": "noyobo",
   "license": "MIT",
+  "engines": {
+    "node": ">=4.0.0"
+  },
   "bugs": {
     "url": "https://github.com/noyobo/img-spriter/issues"
   },
@@ -24,7 +32,8 @@
   "dependencies": {
     "debug": "~2.2.0",
     "object-assign": "~4.0.1",
-    "pngjs": "~2.2.0"
+    "pngjs": "~2.2.0",
+    "request": "~2.69.0"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "~6.7.0",
