--- a/package.json
+++ b/package.json
@@ -4,14 +4,11 @@
   "description": "hello world",
   "main": "index.js",
   "scripts": {
-    "test": "babel index.es7.js -o index.js && node ./test/index-test.js",
-    "build": "babel index.es7.js -o index.js && echo 'ok'",
-    "prepublish": "npm run build"
+    "test": "node ./test/index-test.js"
   },
   "files": [
     "lib/",
-    "index.js",
-    "index.es7.js"
+    "index.js"
   ],
   "repository": {
     "type": "git",
@@ -19,27 +16,25 @@
   },
   "keywords": [
     "spriter",
-    "css",
-    "sprite"
+    "css"
   ],
   "author": "noyobo",
   "license": "MIT",
   "engines": {
-    "node": ">=4.0.0"
+    "node": ">=8.0.0"
   },
   "bugs": {
     "url": "https://github.com/noyobo/img-spriter/issues"
   },
   "homepage": "https://github.com/noyobo/img-spriter#readme",
   "dependencies": {
-    "debug": "~2.2.0",
+    "debug": "~4.1.1",
     "object-merge": "^2.5.1",
-    "pngjs": "~2.2.0",
-    "pngquant": "~0.6.0",
-    "request": "~2.69.0"
+    "pngjs": "~3.3.3",
+    "pngquant": "~1.3.0",
+    "request": "~2.88.0"
   },
   "devDependencies": {
-    "babel-plugin-transform-async-to-generator": "~6.7.0",
     "co": "~4.6.0"
   }
 }
